<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
 
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/register_title"
        android:textColor="#1C86EE"
        android:textSize="30dp" />
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >
 
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:hint="@string/hint_email" />
        
               
        <EditText
            android:id="@+id/etConfPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="@string/hint_pw" />  
        
        <EditText
            android:id="@+id/etPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="@string/hint_conf_pw" />
 
                
        <Button
            android:id="@+id/bRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#1C86EE"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white" />
        
       <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/red01"
        android:textSize="26sp"
        android:visibility="invisible" />
        
    </LinearLayout>
 
</RelativeLayout>
